fix: change title and subtitle spacing in About

--- a/index.css
+++ b/index.css
@@ -96,6 +96,7 @@ li {
     font-size: 20px;
     line-height: 32px;
     color: #E1955FD2;
+    height: 45px;
 }
 
 .list-article {
